--- a/AX6.config
+++ b/AX6.config
@@ -334,7 +334,7 @@ CONFIG_KERNEL_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # Package build options
 #
 # CONFIG_DEBUG is not set
-CONFIG_IPV6=n
+CONFIG_IPV6=y
 
 #
 # Stripping options
