--- a/.github/workflows/编译最新RM2100.yml
+++ b/.github/workflows/编译最新RM2100.yml
@@ -69,6 +69,7 @@ jobs:
           CONFIG_TARGET_ramips=y
           CONFIG_TARGET_ramips_mt7621=y
           CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_redmi-router-ac2100=y
+          CONFIG_IPV6=n
           CONFIG_PACKAGE_luci-app-adbyby-plus=y
           CONFIG_PACKAGE_luci-app-vsftpd=n
           CONFIG_PACKAGE_luci-app-xlnetacc=n
@@ -99,8 +100,8 @@ jobs:
           CONFIG_PACKAGE_luci-app-ssr-plus=y
           CONFIG_PACKAGE_luci-app-zerotier=y
           CONFIG_PACKAGE_luci-app-turboacc=y
-          CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=y
-          CONFIG_PACKAGE_TURBOACC_INCLUDE_OFFLOADING=n
+          CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=n
+          CONFIG_PACKAGE_TURBOACC_INCLUDE_OFFLOADING=y
           CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
           CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
           CONFIG_PACKAGE_luci-app-qbittorrent=n
