--- a/.github/workflows/编译最新Redmi AX6.yml
+++ b/.github/workflows/编译最新Redmi AX6.yml
@@ -104,6 +104,9 @@ jobs:
           CONFIG_PACKAGE_odhcp6c=n
           CONFIG_PACKAGE_ip6tables=n
           CONFIG_PACKAGE_kmod-qca-nss-ecm-premium=y
+          CONFIG_PACKAGE_kmod-qca-nss-dp=y
+          CONFIG_PACKAGE_kmod-qca-nss-drv=y
+          CONFIG_PACKAGE_kmod-qca-ssdk-nohnat=y
           EOF
 
           sed -i 's/^[ \t]*//g' ./.config
