--- a/.github/workflows/编译最新RM2100.yml
+++ b/.github/workflows/编译最新RM2100.yml
@@ -100,8 +100,8 @@ jobs:
           CONFIG_PACKAGE_luci-app-ssr-plus=y
           CONFIG_PACKAGE_luci-app-zerotier=y
           CONFIG_PACKAGE_luci-app-turboacc=y
-          CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=n
-          CONFIG_PACKAGE_TURBOACC_INCLUDE_OFFLOADING=y
+          #CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=n
+          #CONFIG_PACKAGE_TURBOACC_INCLUDE_OFFLOADING=y
           CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
           CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
           CONFIG_PACKAGE_luci-app-qbittorrent=n
