--- a/.github/workflows/编译最新n270.yml
+++ b/.github/workflows/编译最新n270.yml
@@ -46,7 +46,7 @@ jobs:
 
     - name: Update feeds
       run: |
-          git clone https://github.com/coolsnowwolf/lede openwrt
+          git clone https://github.com/Ailick/lede openwrt
           cd openwrt
           sudo sed -i -e '$asrc-git helloworld https://github.com/fw876/helloworld' ./feeds.conf.default
           ./scripts/feeds clean
