--- a/.github/workflows/编译最新Redmi AX6.yml
+++ b/.github/workflows/编译最新Redmi AX6.yml
@@ -42,7 +42,7 @@ jobs:
           
     - name: Clone source code
       run: |
-        git clone https://github.com/coolsnowwolf/lede.git lede
+        git clone https://github.com/Ailick/lede.git lede
         
     - name: Update feeds
       run: |
